# python_scripts

./: ASIObjectDictionary.xlsx  ASIObjectDictionaryEnums.xlsx  airtable_module.py  app_cli.py  app_main.py  ble_module.py  dictionary_module.py  init_serial.py  log_config.py  modbus_module.py  pyproject.toml  ~$ASIObjectDictionary.xlsx
app/: app_airtable.py  app_pathing.py
backup/: bitvector_template.xlsx
config/: app_config.json  app_config.yaml
tests/: test_airtable.py  test_ble.py  test_dict_df.py  test_dictionary_parse.py  test_read_modbus.py
tests/log/: app_cli.py
